--- a/proje-detay.html
+++ b/proje-detay.html
@@ -104,43 +104,41 @@
 
     <!-- =========== project detail content START =========== -->
     <section>
-        <div class="container">
-            <div class="text-center">
-                <img src="assets/img/footer-logo.png">
-                <div class="project-detail-content container-content mt-5">
-                    <h4>BU PROJE’NİN YILDIZI SİZ OLUN</h4>
-                    <p>Sizi sadece yeni bir eve değil, aynı zamanda konforlu ve ayrıcalıklı bir hayata davet ediyoruz.
-                        Yedi Yapı; modern mimarisi, sosyal donatıları ve şehrin yıldızı gibi parlayan özel konumu ile
-                        “Barınmak için değil, kaliteli yaşamı bulmak için” size en uygun seçenekleri sunacak, hızlı ve
-                        sürekli gelişen bölgeye ayrıcalıklı bir değer katacak!
-                    </p>
-                    <p>
-                        Konumuyla yakaladığı avantajı sağlam yapısı ve estetik mimarisi ile taçlandıran Yedi Yapı
-                        hayatınızı her açıdan güzelleştirecek.
-                        Tramvay güzergahında yer alan ayrıcalıklı konumu ile sahip olacağınız ulaşım kolaylığı çok iyi
-                        gelecek.</p>
-                </div>
-
+        <div class="text-center">
+            <img src="assets/img/footer-logo.png">
+            <div class="project-detail-content container-content mt-5">
+                <h4>BU PROJE’NİN YILDIZI SİZ OLUN</h4>
+                <p>Sizi sadece yeni bir eve değil, aynı zamanda konforlu ve ayrıcalıklı bir hayata davet ediyoruz.
+                    Yedi Yapı; modern mimarisi, sosyal donatıları ve şehrin yıldızı gibi parlayan özel konumu ile
+                    “Barınmak için değil, kaliteli yaşamı bulmak için” size en uygun seçenekleri sunacak, hızlı ve
+                    sürekli gelişen bölgeye ayrıcalıklı bir değer katacak!
+                </p>
+                <p>
+                    Konumuyla yakaladığı avantajı sağlam yapısı ve estetik mimarisi ile taçlandıran Yedi Yapı
+                    hayatınızı her açıdan güzelleştirecek.
+                    Tramvay güzergahında yer alan ayrıcalıklı konumu ile sahip olacağınız ulaşım kolaylığı çok iyi
+                    gelecek.</p>
             </div>
-            <div class="project-detail-content-container">
-                <img class="project-detail-preview-img" src="assets/img/project-detail/other-project.png">
-                <div class="project-detail-content mt-4">
-                    <span class="primary-title mb-4"><i class="icon-mesure"></i> Konsept</span>
-                    <p>Yedi Yapı, bölgenin değerine yakışan standartlar ile Yedi Yapı güvencesiyle hayat buluyor,
-                        şehrin yeni ikonlarından biri olmaya aday cazibesiyle ise adeta Kayseri’ye göz kırpıyor!</p>
-                    <p>Göz alıcı mimari ve fonksiyonelliğin ön plana çıktığı bu Cadde’de lokasyonun avantajlarından
-                        faydalanacak ve şehrin kalbini tüm ritmiyle hissedeceksiniz.</p>
-                    <p>Yedi Yapı Cadde, karmaşanın yarattığı yorgunluktan uzakta, aradığınız her şeyi tam olarak
-                        karşılayacak şekilde, huzurdan ilham alarak tasarlandı.
-                        Kayseri’nin çehresini değiştirecek estetiğe sahip Yedi Yapı Cadde, kuzey çevreyoluna
-                        yakınlığı sebebiyle şehir hastanesi, alışveriş merkezleri ve üniversitelere; projenin hemen
-                        yanına yeni açılacak olan yol sayesinde ise havaalanı gibi önemli merkezlere yakın olduğu
-                        gibi bulunduğu cadde üzerinden geçmesi planlanan tramvay güzergahının avantajıyla ise
-                        ulaşımı sizler için daha kolay bir hale getiriyor.</p>
-                    <p>Tüm bunların yanı sıra içerisinde yer alan ticari alanları ile de değerli bir yatırım ve
-                        nitelikli bir yaşam sunuyor. Yedi Yapı Cadde hayatınızı her açıdan güzelleştirecek.</p>
-                    <p>Peki siz ayrıcalıklar dünyasında yer almaya hazır mısınız?</p>
-                </div>
+
+        </div>
+        <div class="project-detail-content-container">
+            <img class="project-detail-preview-img" src="assets/img/project-detail/other-project.png">
+            <div class="project-detail-content mt-4">
+                <span class="primary-title mb-4"><i class="icon-mesure"></i> Konsept</span>
+                <p>Yedi Yapı, bölgenin değerine yakışan standartlar ile Yedi Yapı güvencesiyle hayat buluyor,
+                    şehrin yeni ikonlarından biri olmaya aday cazibesiyle ise adeta Kayseri’ye göz kırpıyor!</p>
+                <p>Göz alıcı mimari ve fonksiyonelliğin ön plana çıktığı bu Cadde’de lokasyonun avantajlarından
+                    faydalanacak ve şehrin kalbini tüm ritmiyle hissedeceksiniz.</p>
+                <p>Yedi Yapı Cadde, karmaşanın yarattığı yorgunluktan uzakta, aradığınız her şeyi tam olarak
+                    karşılayacak şekilde, huzurdan ilham alarak tasarlandı.
+                    Kayseri’nin çehresini değiştirecek estetiğe sahip Yedi Yapı Cadde, kuzey çevreyoluna
+                    yakınlığı sebebiyle şehir hastanesi, alışveriş merkezleri ve üniversitelere; projenin hemen
+                    yanına yeni açılacak olan yol sayesinde ise havaalanı gibi önemli merkezlere yakın olduğu
+                    gibi bulunduğu cadde üzerinden geçmesi planlanan tramvay güzergahının avantajıyla ise
+                    ulaşımı sizler için daha kolay bir hale getiriyor.</p>
+                <p>Tüm bunların yanı sıra içerisinde yer alan ticari alanları ile de değerli bir yatırım ve
+                    nitelikli bir yaşam sunuyor. Yedi Yapı Cadde hayatınızı her açıdan güzelleştirecek.</p>
+                <p>Peki siz ayrıcalıklar dünyasında yer almaya hazır mısınız?</p>
             </div>
         </div>
     </section>
@@ -148,7 +146,7 @@
 
     <!-- =========== Project Galery START =========== -->
     <section class="bg-light">
-        <div class="project-detail-content-container">
+        <div class="project-detail-content-container p-2">
             <h5 class="primary-title mb-4"><i class="icon-image"></i> Proje Galerisi</h5>
             <div class="project-detail-galery">
                 <!-- <a href="" class="image">
@@ -159,6 +157,39 @@
         </div>
     </section>
     <!-- =========== Project Galery END =========== -->
+
+
+    <!-- =========== Porject Plans START =========== -->
+    <section class="bg-primary">
+        <div class="project-detail-content-container padding-60">
+            <h5 class="primary-title text-white mb-4">
+                <i class="icon-stair"></i>
+                Kat Planları
+            </h5>
+            <div class="btn-positions">
+                <span class="btn-redirect left-position plansSwiper-button-prev"><i
+                        class="icon-chevron-left"></i></span>
+                <div class="overflow-hidden">
+                    <div class="swiper plansSwiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <img src="assets/img/project-detail/plains/plain-1.png">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="assets/img/project-detail/plains/plain-1.png">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="assets/img/project-detail/plains/plain-1.png">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <span class="btn-redirect right-position plansSwiper-button-next"><i
+                        class="icon-chevron-right"></i></span>
+            </div>
+        </div>
+    </section>
+    <!-- =========== Porject Plans END =========== -->
 
 
     <!-- =========== Header START =========== -->
