--- a/proje-detay.html
+++ b/proje-detay.html
@@ -187,12 +187,59 @@
                 <span class="btn-redirect right-position plansSwiper-button-next"><i
                         class="icon-chevron-right"></i></span>
             </div>
+            <div class="plain-pagination"></div>
         </div>
     </section>
     <!-- =========== Porject Plans END =========== -->
 
+    <!-- =========== project location START =========== -->
+    <section>
+        <div class="project-detail-content-container">
+            <h5 class="primary-title mb-4"><i class="icon-pin"></i> Lokasyon</h5>
+            <iframe class="project-location-map"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10107.703831573323!2d28.777720201663307!3d41.133689247777184!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14caaec2489690fb%3A0xd8db19afc6daedc9!2sToki%20Osmangazi%20%C4%B0lkokulu!5e0!3m2!1sen!2str!4v1663056740586!5m2!1sen!2str"
+                style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </section>
+    <!-- =========== project location END =========== -->
 
-    <!-- =========== Header START =========== -->
+    <!-- =========== new projects and sales project START  =========== -->
+    <section>
+        
+        <div class="project-detail-content-container">
+            <h5 class="h5-title font-600 text-center mb-5 px-4">SATIŞTAKİ PROJELER, YENİ PROJELER</h5>
+            <div class="swiper newAndSaleProjectsSwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="row g-0">
+                            <div class="col-lg-6 bg-primary">
+                                <div class="newSalesProjectContent">
+                                    <h3 class="title">YEDİ YAPI VADİ</h3>
+                                    <p>Sizi sadece yeni bir eve değil, aynı zamanda konforlu ve ayrıcalıklı bir hayata
+                                        davet ediyoruz. Yedi Yapı; modern mimarisi, sosyal donatıları ve şehrin yıldızı
+                                        gibi parlayan özel konumu ile “Barınmak için değil, kaliteli yaşamı bulmak için”
+                                        size en uygun seçenekleri sunacak, hızlı ve sürekli gelişen bölgeye ayrıcalıklı
+                                        bir değer katacak!</p>
+                                        <ol class="features">
+                                            <li><i class="icon-pin"></i>Cevahir</li>
+                                            <li><i class="icon-house"></i>9 Blok</li>
+                                            <li><i class="icon-opened-door"></i>2+1, 3+, 4+1</li>
+                                        </ol>
+                                        <a href="" class="btn-primary white">Prokeyi İncele <i class="icon-Path3662"></i></a>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <img src="assets/img/project-detail/project-detail-img.png">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =========== new projects and sales project END  =========== -->
+
 
     <!-- =========== Footer Side  =========== -->
     <footer>
