--- a/proje-detay.html
+++ b/proje-detay.html
@@ -206,35 +206,44 @@
 
     <!-- =========== new projects and sales project START  =========== -->
     <section>
-        
-        <div class="project-detail-content-container">
+
+        <div class="project-detail-content-container-v2">
             <h5 class="h5-title font-600 text-center mb-5 px-4">SATIŞTAKİ PROJELER, YENİ PROJELER</h5>
-            <div class="swiper newAndSaleProjectsSwiper">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div class="row g-0">
-                            <div class="col-lg-6 bg-primary">
-                                <div class="newSalesProjectContent">
-                                    <h3 class="title">YEDİ YAPI VADİ</h3>
-                                    <p>Sizi sadece yeni bir eve değil, aynı zamanda konforlu ve ayrıcalıklı bir hayata
-                                        davet ediyoruz. Yedi Yapı; modern mimarisi, sosyal donatıları ve şehrin yıldızı
-                                        gibi parlayan özel konumu ile “Barınmak için değil, kaliteli yaşamı bulmak için”
-                                        size en uygun seçenekleri sunacak, hızlı ve sürekli gelişen bölgeye ayrıcalıklı
-                                        bir değer katacak!</p>
+            <div class="d-flex align-items-center" style="gap: 20px;">
+                <span class="btn-redirect primary newAndSaleProjectsSwiper-button-prev d-lg-flex d-none"><i class="icon-chevron-left"></i></span>
+                <div class="swiper newAndSaleProjectsSwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="row g-0">
+                                <div class="col-lg-6 bg-primary">
+                                    <div class="newSalesProjectContent">
+                                        <h3 class="title">YEDİ YAPI VADİ</h3>
+                                        <p>Sizi sadece yeni bir eve değil, aynı zamanda konforlu ve ayrıcalıklı bir
+                                            hayata
+                                            davet ediyoruz. Yedi Yapı; modern mimarisi, sosyal donatıları ve şehrin
+                                            yıldızı
+                                            gibi parlayan özel konumu ile “Barınmak için değil, kaliteli yaşamı bulmak
+                                            için”
+                                            size en uygun seçenekleri sunacak, hızlı ve sürekli gelişen bölgeye
+                                            ayrıcalıklı
+                                            bir değer katacak!</p>
                                         <ol class="features">
                                             <li><i class="icon-pin"></i>Cevahir</li>
                                             <li><i class="icon-house"></i>9 Blok</li>
                                             <li><i class="icon-opened-door"></i>2+1, 3+, 4+1</li>
                                         </ol>
-                                        <a href="" class="btn-primary white">Prokeyi İncele <i class="icon-Path3662"></i></a>
+                                        <a href="" class="btn-primary white">Prokeyi İncele <i
+                                                class="icon-Path3662"></i></a>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <img src="assets/img/project-detail/project-detail-img.png">
+                                <div class="col-lg-6">
+                                    <img src="assets/img/project-detail/project-detail-img.png">
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <span class="btn-redirect primary newAndSaleProjectsSwiper-button-next d-lg-flex d-none"><i class="icon-chevron-right"></i></span>
             </div>
         </div>
     </section>
