--- a/tarihce.html
+++ b/tarihce.html
@@ -85,7 +85,7 @@
                 <div
                     class="col-lg-5 order-1 order-lg-0 d-flex flex-lg-column flex-column-reverse justify-content-center">
                     <div class="d-flex align-items-center">
-                        <div class="section-v1-content white">
+                        <div class="section-v1-content white tarihce-content">
                             <h6 class="sub-title">Tarihçe</h6>
                             <h2 class="title">1944’den Bugüne</h2>
                             <p>1999 yılında inşaat sektörüne giren Yedi Yapı, iş dünyasındaki vizyonuyla, kısa sürede
@@ -164,7 +164,7 @@
     <!-- =========== Owner START  =========== -->
     <section class="overflow-hidden ">
         <div class="owner-container ms-auto">
-            <div class="row">
+            <div class="row flex-lg-row flex-column-reverse">
                 <div class="col-lg-6 d-flex align-items-center">
                     <div class="section-v1-content owner">
                         <h2 class="title">
@@ -180,7 +180,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="img-capsule overflow-hidden">
-                        <img class="owner-img mx-auto" src="assets/img/about-us/history-founder.png">
+                        <img class="owner-img w-100 mx-auto" src="assets/img/about-us/history-founder.png">
                         <div class="back-object bg-primary w-70 me-0"></div>
                     </div>
                 </div>
@@ -190,9 +190,9 @@
     <!-- =========== Owner END =========== -->
 
     <!-- =========== setup START  =========== -->
-    <section class="overflow-hidden bg-light">
+    <section class="overflow-hidden bg-light setup-section">
         <div class="owner-container me-auto ">
-            <div class="row gy-4 flex-column-reverse flex-lg-row">
+            <div class="row">
                 <div class="col-lg-6">
                     <div class="img-capsule ">
                         <img class="setup-img " src="assets/img/about-us/setup-img.png">
