--- a/iletisim.html
+++ b/iletisim.html
@@ -138,7 +138,7 @@
                     gerçekleştirmiş olduğum üyelik başvurusu süreci ile ilgili olarak kişisel verilerimin işlenmesine onay veriyorum.
                 </label>
 
-                <div class="text-end mt-5">
+                <div class="text-lg-right text-center mt-5">
                     <button class="btn-primary position-icon">Gönder <i class="icon-big-right"></i></button>
                 </div>
 
