--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="assets/vendor/bootstrap-5.1.3/css/bootstrap-grid.css">
     <link rel="stylesheet" href="assets/vendor/swipperjs/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/vendor/icomoon/style.css">
+    <link rel="stylesheet" href="assets/vendor/glightbox/css/glightbox.min.css">
     <!-- Main Css Files -->
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -82,7 +83,7 @@
                                 <h1 class="title ">Geleceğe <br class="d-none d-lg-block"> Bir Adım</h1>
                                 <p>Yedi Yapı’nın sürdürülebilir, kârlı büyüme yaklaşımı olan Geleceğe. Birlikte; gücünü
                                     yaratacağımız dönüşümden ve iş birliklerine olan inancımızdan alıyor.</p>
-                                <a href="" class="btn-blur bordered ">Detaylı Bilgi</a>
+                                <a href="proje-detay.html" class="btn-blur bordered ">Detaylı Bilgi</a>
                                 <div class="redirect">
                                     <a class="btn-redirect indexHeroSwiper-button-prev" href="#"><i
                                             class="icon-chevron-left"></i></a>
@@ -100,7 +101,7 @@
                                 <h1 class="title">Yeniden <br class="d-none d-lg-block"> yaratılış</h1>
                                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo ex nam qui odit
                                     ducimus, numquam repellat veritatis quasi?</p>
-                                <a href="" class="btn-blur bordered ">Detaylı Bilgi</a>
+                                <a href="proje-detay.html" class="btn-blur bordered ">Detaylı Bilgi</a>
                                 <div class="redirect">
                                     <a class="btn-redirect indexHeroSwiper-button-prev" href="#"><i
                                             class="icon-chevron-left"></i></a>
@@ -194,7 +195,7 @@
                                     kültürünİnsanlar; toplumsal yaşam şeklini ve bulundukları kültürel ve sosyal
                                     değerlerini...
                                 </p>
-                                <a href="#" class="btn-blur">Detaylı Bilgi</a>
+                                <a href="biz-kimiz.html" class="btn-blur">Detaylı Bilgi</a>
                                 <div class="redirect">
                                     <a class="btn-redirect whyUsSwiper-button-prev" href="#"><i
                                             class="icon-chevron-left"></i></a>
@@ -205,7 +206,7 @@
                         </div>
                         <div class="col-lg-6 why-us-image-side  order-0 order-lg-1">
                             <img src="assets/img/index/why-us.png">
-                            <a href="" class="content">
+                            <a href="biz-kimiz.html" class="content">
                                 <div>
                                     <h4 class="title">Yedi Yapı Garden</h4>
                                     <span class="sub">2018</span>
@@ -224,7 +225,7 @@
                                     tempora ab laudantium voluptatum saepe et deserunt commodi error, obcaecati,
                                     reiciendis numquam velit ea non qui necessitatibus atque architecto.
                                 </p>
-                                <a href="#" class="btn-blur">Detaylı Bilgi</a>
+                                <a href="biz-kimiz.html" class="btn-blur">Detaylı Bilgi</a>
                                 <div class="redirect">
                                     <a class="btn-redirect whyUsSwiper-button-prev" href="#"><i
                                             class="icon-chevron-left"></i></a>
@@ -235,7 +236,7 @@
                         </div>
                         <div class="col-lg-6 why-us-image-side  order-0 order-lg-1">
                             <img src="assets/img/index/misyon.png">
-                            <a href="" class="content">
+                            <a href="biz-kimiz.html" class="content">
                                 <div>
                                     <h4 class="title">Yeni Şehir</h4>
                                     <span class="sub">2018</span>
@@ -258,7 +259,7 @@
                 <div class="swiper-slide">
                     <div class="misyon-wrap" style="background-image: url(assets/img/index/misyon.png);">
                         <div class="container">
-                            <a href="" class="play-btn"><i class="icon-play"></i></a>
+                            <a href="https://www.youtube.com/watch?v=un3NkWnHl9Q" class="play-btn"><i class="icon-play"></i></a>
                             <div class="content">
                                 <h3 class="title">Misyonumuz</h3>
                                 <p>Ülkemizin Yüksek Büyüme Potansiyeline Yatırım Yapmak Isteyenler Için En Iyi
@@ -273,7 +274,7 @@
                 <div class="swiper-slide">
                     <div class="misyon-wrap" style="background-image: url(assets/img/index/hero.png);">
                         <div class="container">
-                            <a href="" class="play-btn"><i class="icon-play"></i></a>
+                            <a href="https://www.youtube.com/watch?v=un3NkWnHl9Q" class="play-btn glightbox"><i class="icon-play"></i></a>
                             <div class="content">
                                 <h3 class="title">Misyonumuz</h3>
                                 <p>Ülkemizin Yüksek Büyüme Potansiyeline Yatırım Yapmak Isteyenler Için En Iyi
@@ -298,7 +299,7 @@
         <div class="container">
             <div class="text-center mb-40">
                 <h3 class="h3-title mb-10">Projelerimiz</h3>
-                <a href="" class="text-primary font-600">Tümünü gör</a>
+                <a href="projelerimiz.html" class="text-primary font-600">Tümünü gör</a>
             </div>
             <div class="projects-list">
                 <div class="row gy-4">
@@ -460,7 +461,7 @@
             <a class="b-nav-btn blogFeaturesSwiper-button-next" href="#"><i class="icon-chevron-right"></i></a>
         </div>
         <div class="text-center mt-40">
-            <a href="" class="btn-rounded-redirect">Tüm Haberler <i class="icon-Path3662"> </i></a>
+            <a href="blog.html" class="btn-rounded-redirect">Tüm Haberler <i class="icon-Path3662"> </i></a>
         </div>
     </section>
     <!-- =========== Blog END =========== -->
@@ -575,6 +576,7 @@
     <script src="assets/vendor/jquerry/jquery-3.6.0.min.js"></script>
     <script src="assets/vendor/swipperjs/swiper-bundle.min.js"></script>
     <script src="assets/vendor/waypoint/jquery.waypoints.js"></script>
+    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
 
     <!-- Main Js Source File -->
     <script src="assets/js/main.js"></script>
