--- a/blog.html
+++ b/blog.html
@@ -89,7 +89,7 @@
                                         Proje Açıklaması.. </h3>
                                     <p>Yatırımları, güçlü markaları ve tüketicilere verdiği değer ile büyüyen
                                         Türkiye’nin enerjisi. Geleceği belirleyecek kadar farklıyız.</p>
-                                    <a href="" class="btn-primary mt-5">Devamını Oku <i class="icon-Path3662"></i></a>
+                                    <a href="blog-detay.html" class="btn-primary mt-5">Devamını Oku <i class="icon-Path3662"></i></a>
                                     <div class="d-flex mt-3">
                                         <div class="btn-redirect primary me-2 blogHeroSwiper-button-prev"><i
                                                 class="icon-chevron-left"></i></div>
@@ -116,7 +116,7 @@
                                     <h3 class="title">Yedi Yapı’dan Tarihsel Bir yapı</h3>
                                     <p>Yatırımları, güçlü markaları ve tüketicilere verdiği değer ile büyüyen
                                         Türkiye’nin enerjisi. Geleceği belirleyecek kadar farklıyız.</p>
-                                    <a href="" class="btn-primary mt-5">Devamını Oku <i class="icon-Path3662"></i></a>
+                                    <a href="blog-detay.html" class="btn-primary mt-5">Devamını Oku <i class="icon-Path3662"></i></a>
                                     <div class="d-flex mt-3">
                                         <div class="btn-redirect primary me-2 blogHeroSwiper-button-prev"><i
                                                 class="icon-chevron-left"></i></div>
