--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 <div class="swiper-slide">
                     <div class="misyon-wrap" style="background-image: url(assets/img/index/misyon.png);">
                         <div class="container">
-                            <a href="https://www.youtube.com/watch?v=un3NkWnHl9Q" class="play-btn"><i class="icon-play"></i></a>
+                            <a href="https://www.youtube.com/watch?v=un3NkWnHl9Q" class="play-btn glightbox"><i class="icon-play"></i></a>
                             <div class="content">
                                 <h3 class="title">Misyonumuz</h3>
                                 <p>Ülkemizin Yüksek Büyüme Potansiyeline Yatırım Yapmak Isteyenler Için En Iyi
