--- a/blog.html
+++ b/blog.html
@@ -96,8 +96,7 @@
                                         <div class="btn-redirect primary blogHeroSwiper-button-next"><i
                                                 class="icon-chevron-right"></i></div>
                                     </div>
-                                    <div class="blogHeroPagination">
-
+                                    <div class="blogHeroPagination d-lg-flex d-none">
                                     </div>
                                 </div>
                             </div>
@@ -123,7 +122,7 @@
                                         <div class="btn-redirect primary blogHeroSwiper-button-next"><i
                                                 class="icon-chevron-right"></i></div>
                                     </div>
-                                    <div class="blogHeroPagination">
+                                    <div class="blogHeroPagination d-lg-flex d-none">
 
                                     </div>
                                 </div>
@@ -136,6 +135,9 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="blogHeroPagination justify-content-center d-lg-none d-flex">
+
                 </div>
             </div>
         </div>
