--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                 sağlanarak bilimsel teknolojik gelişmelere bağlı olan kalıp kültürün
                                 gelişimin sağlanarak yeni bireyler yetiştirmektir.
                             </p>
-                            <a class="read-more" href="">Devamını Oku <i class="icon-chevron-right ms-2"></i></a>
+                            <a class="read-more" href="biz-kimiz.html">Devamını Oku <i class="icon-chevron-right ms-2"></i></a>
                         </div>
 
                     </div>
@@ -308,7 +308,7 @@
                             <h3 class="h3-title mb-20">Ankara Rovens Konutları</h3>
                             <p>Yatırımları, güçlü markaları ve tüketicilere verdiği değer ile büyüyen
                                 Türkiye’nin enerjisi. Geleceği belirleyecek kadar farklıyız.</p>
-                            <a class="btn-primary" href="">Detaylı Bilgi <i class="icon-Path3662"></i></a>
+                            <a class="btn-primary" href="proje-detay.html">Detaylı Bilgi <i class="icon-Path3662"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-6  order-0 order-lg-1 p-0 p-lg-3">
@@ -324,8 +324,8 @@
                         <div class="content">
                             <h3 class="h3-title mb-20">7 Yapı Yaşam Evleri</h3>
                             <p>Yatırımları, güçlü markaları ve tüketicilere verdiği değer ile büyüyen
-                                Türkiye’nin enerjisi. Geleceği belirleyecek kadar farklıyız​.</p>
-                            <a class="btn-primary" href="">Detaylı Bilgi <i class="icon-Path3662"></i></a>
+                                Türkiye’nin enerjisi. Geleceği belirleyecek kadar farklıyız.</p>
+                            <a class="btn-primary" href="proje-detay.html">Detaylı Bilgi <i class="icon-Path3662"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-6  order-0 order-lg-1 p-0 p-lg-3">
