--- a/proje-detay.html
+++ b/proje-detay.html
@@ -124,7 +124,7 @@
         <div class="project-detail-content-container">
             <img class="project-detail-preview-img" src="assets/img/project-detail/other-project.png">
             <div class="project-detail-content mt-4">
-                <span class="primary-title mb-4"><i class="icon-mesure"></i> Konsept</span>
+                <span class="primary-title mb-4 px-0"><i class="icon-mesure"></i> Konsept</span>
                 <p>Yedi Yapı, bölgenin değerine yakışan standartlar ile Yedi Yapı güvencesiyle hayat buluyor,
                     şehrin yeni ikonlarından biri olmaya aday cazibesiyle ise adeta Kayseri’ye göz kırpıyor!</p>
                 <p>Göz alıcı mimari ve fonksiyonelliğin ön plana çıktığı bu Cadde’de lokasyonun avantajlarından
@@ -147,7 +147,7 @@
     <!-- =========== Project Galery START =========== -->
     <section class="bg-light">
         <div class="project-detail-content-container p-2">
-            <h5 class="primary-title mb-4"><i class="icon-image"></i> Proje Galerisi</h5>
+            <h5 class="primary-title mb-4 px-0"><i class="icon-image"></i> Proje Galerisi</h5>
             <div class="project-detail-galery">
                 <!-- <a href="" class="image">
                     <img src="assets/img/project-detail/gallery/img-1.png">
