--- a/proje-detay.html
+++ b/proje-detay.html
@@ -210,7 +210,8 @@
         <div class="project-detail-content-container-v2">
             <h5 class="h5-title font-600 text-center mb-5 px-4">SATIŞTAKİ PROJELER, YENİ PROJELER</h5>
             <div class="d-flex align-items-center" style="gap: 20px;">
-                <span class="btn-redirect primary newAndSaleProjectsSwiper-button-prev d-lg-flex d-none"><i class="icon-chevron-left"></i></span>
+                <span class="btn-redirect primary newAndSaleProjectsSwiper-button-prev d-lg-flex d-none"><i
+                        class="icon-chevron-left"></i></span>
                 <div class="swiper newAndSaleProjectsSwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
@@ -243,7 +244,8 @@
                         </div>
                     </div>
                 </div>
-                <span class="btn-redirect primary newAndSaleProjectsSwiper-button-next d-lg-flex d-none"><i class="icon-chevron-right"></i></span>
+                <span class="btn-redirect primary newAndSaleProjectsSwiper-button-next d-lg-flex d-none"><i
+                        class="icon-chevron-right"></i></span>
             </div>
         </div>
     </section>
@@ -344,10 +346,14 @@
 
 
             }
-         
+
+        });
+        const lightbox = GLightbox({
+            touchNavigation: true,
+            loop: true,
+            autoplayVideos: true
         });
     </script>
-
 
 </body>
 
