--- a/projelerimiz.html
+++ b/projelerimiz.html
@@ -21,7 +21,7 @@
     <!-- =========== Header Side =========== -->
     <header class="light">
         <div class="container d-flex align-items-center flex-lg-nowrap flex-wrap justify-content-between">
-            <a class="logo" href="index.html"> <img src="assets/img/logo.png" alt="logo"></a>
+            <a class="logo" href="index.html"> <img src="assets/img/logo-antrasit.png" alt="logo"></a>
             <a href="#" class="mobile-btn d-block d-lg-none">
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 512 512">
                     <path
