--- a/proje-detay.html
+++ b/proje-detay.html
@@ -167,7 +167,7 @@
                 Kat Planları
             </h5>
             <div class="btn-positions">
-                <span class="btn-redirect left-position plansSwiper-button-prev"><i
+                <span class="btn-redirect left-position plansSwiper-button-prev d-none d-sm-flex"><i
                         class="icon-chevron-left"></i></span>
                 <div class="overflow-hidden">
                     <div class="swiper plansSwiper">
@@ -184,7 +184,7 @@
                         </div>
                     </div>
                 </div>
-                <span class="btn-redirect right-position plansSwiper-button-next"><i
+                <span class="btn-redirect right-position plansSwiper-button-next d-none d-sm-flex"><i
                         class="icon-chevron-right"></i></span>
             </div>
             <div class="plain-pagination"></div>
