--- a/proje-detay.html
+++ b/proje-detay.html
@@ -162,7 +162,7 @@
     <!-- =========== Porject Plans START =========== -->
     <section class="bg-primary">
         <div class="project-detail-content-container padding-60">
-            <h5 class="primary-title text-white mb-4">
+            <h5 class="primary-title text-white mb-4 px-0">
                 <i class="icon-stair"></i>
                 Kat Planları
             </h5>
@@ -233,7 +233,7 @@
                                             <li><i class="icon-house"></i>9 Blok</li>
                                             <li><i class="icon-opened-door"></i>2+1, 3+, 4+1</li>
                                         </ol>
-                                        <a href="" class="btn-primary white">Prokeyi İncele <i
+                                        <a href="" class="btn-primary min-w-100 white">Prokeyi İncele <i
                                                 class="icon-Path3662"></i></a>
                                     </div>
                                 </div>
