--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <link rel="stylesheet" href="assets/vendor/swipperjs/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/vendor/icomoon/style.css">
     <link rel="stylesheet" href="assets/vendor/glightbox/css/glightbox.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="assets/vendor/aos/aos.css">
     <!-- Main Css Files -->
     <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
@@ -122,31 +123,31 @@
     <section class="about-improvements-section">
         <div class="container">
             <div class="row gy-3 px-lg-5">
-                <div class="col-lg col-sm-4 col-6">
+                <div class="col-lg col-sm-4 col-6" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
                     <div class="about-border-card">
                         <img src="assets/img/svg/building.svg">
                         <p>Gayrimenkul</p>
                     </div>
                 </div>
-                <div class="col-lg col-sm-4 col-6">
+                <div class="col-lg col-sm-4 col-6" data-aos="zoom-in"  data-aos-delay="200" data-aos-once="true">
                     <div class="about-border-card">
                         <img src="assets/img/svg/dart.svg">
                         <p>İstikrar</p>
                     </div>
                 </div>
-                <div class="col-lg col-sm-4 col-6">
+                <div class="col-lg col-sm-4 col-6" data-aos="zoom-in"  data-aos-delay="300" data-aos-once="true">
                     <div class="about-border-card">
                         <img src="assets/img/svg/build.svg">
                         <p>İnşaat</p>
                     </div>
                 </div>
-                <div class="col-lg col-sm-4 col-6">
+                <div class="col-lg col-sm-4 col-6" data-aos="zoom-in"  data-aos-delay="400" data-aos-once="true">
                     <div class="about-border-card">
                         <img src="assets/img/svg/tech.svg">
                         <p>Teknoloji</p>
                     </div>
                 </div>
-                <div class="col-lg col-sm-4 col-6">
+                <div class="col-lg col-sm-4 col-6" data-aos="zoom-in"  data-aos-delay="500" data-aos-once="true">
                     <div class="about-border-card">
                         <img src="assets/img/svg/bulb.svg">
                         <p>İnovasyon</p>
@@ -154,13 +155,13 @@
                 </div>
             </div>
             <div class="about-content">
-                <div class="row gy-md-5 gy-3 ">
-                    <div class="col-lg-4 d-flex justify-content-center flex-column center">
+                <div class="row gy-md-5 gy-3">
+                    <div class="col-lg-4 d-flex justify-content-center flex-column center"  data-aos="fade-right" data-aos-duration="2000" data-aos-once="true">
                         <h1 class="title">Hakkımızda Gelişmeler</h1>
                         <p class="font-500">Müşterilerimiz, iş ortaklarımız ve çalışanlarımız için dijital dönüşüm
                             hedeflerimiz ve projelerimiz.</p>
                     </div>
-                    <div class="col-lg-8 d-flex align-items-center">
+                    <div class="col-lg-8 d-flex align-items-center"  data-aos="fade-left" data-aos-duration="2000" data-aos-once="true">
                         <img src="assets/img/index/about-img.png" class="d-none d-md-block">
                         <div class="content">
                             <p>İnsanlar; toplumsal yaşam şeklini ve bulundukları kültürel ve sosyal
@@ -181,12 +182,12 @@
     <!-- =========== About improvements END =========== -->
 
     <!-- =========== WHY US START =========== -->
-    <section class="p-0 why-us-section">
+    <section class="p-0 why-us-section"  data-aos="fade-up" data-aos-duration="2000" data-aos-once="true">
         <div class="swiper whyUsSwiper">
             <div class="swiper-wrapper">
-                <div class="swiper-slide">
+                <div class="swiper-slide" >
                     <div class="row g-0">
-                        <div class="col-lg-6 d-flex order-1 order-lg-0">
+                        <div class="col-lg-6 d-flex order-1 order-lg-0" >
                             <div class="why-us-wrap">
                                 <h3 class="title">Neden Yedi Yapı?</h3>
                                 <p>Ülkemizin yüksek büyüme potansiyeline yatırım yapmak isteyenler için
@@ -253,7 +254,7 @@
     <!-- =========== WHY US END =========== -->
 
     <!-- =========== Misyon START =========== -->
-    <section class="misyon-section">
+    <section class="misyon-section" >
         <div class="swiper misyonSwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
@@ -297,13 +298,13 @@
     <!-- =========== Our Projects START =========== -->
     <section class="index-our-project">
         <div class="container">
-            <div class="text-center mb-40">
+            <div class="text-center mb-40" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true">
                 <h3 class="h3-title mb-10">Projelerimiz</h3>
                 <a href="projelerimiz.html" class="text-primary font-600">Tümünü gör</a>
             </div>
             <div class="projects-list">
                 <div class="row gy-4">
-                    <div class="col-lg-6 project-content-container order-1 order-lg-0">
+                    <div class="col-lg-6 project-content-container order-1 order-lg-0" data-aos-duration="2000" data-aos="fade-right"  data-aos-delay="200" data-aos-once="true">
                         <div class="content">
                             <h3 class="h3-title mb-20">Ankara Rovens Konutları</h3>
                             <p>Yatırımları, güçlü markaları ve tüketicilere verdiği değer ile büyüyen
@@ -311,7 +312,7 @@
                             <a class="btn-primary" href="proje-detay.html">Detaylı Bilgi <i class="icon-Path3662"></i></a>
                         </div>
                     </div>
-                    <div class="col-lg-6  order-0 order-lg-1 p-0 p-lg-3">
+                    <div class="col-lg-6  order-0 order-lg-1 p-0 p-lg-3" data-aos-duration="2000"  data-aos="fade-left" data-aos-delay="200" data-aos-once="true">
                         <div class="img-capsule">
                             <img src="assets/img/projects/project-1.png">
                             <div class="back-object"></div>
@@ -320,7 +321,7 @@
                 </div>
 
                 <div class="row gy-4 ">
-                    <div class="col-lg-6 project-content-container order-1 order-lg-0">
+                    <div class="col-lg-6 project-content-container order-1 order-lg-0" data-aos-duration="2000" data-aos="fade-left" data-aos-delay="200" data-aos-once="true">
                         <div class="content">
                             <h3 class="h3-title mb-20">7 Yapı Yaşam Evleri</h3>
                             <p>Yatırımları, güçlü markaları ve tüketicilere verdiği değer ile büyüyen
@@ -328,7 +329,7 @@
                             <a class="btn-primary" href="proje-detay.html">Detaylı Bilgi <i class="icon-Path3662"></i></a>
                         </div>
                     </div>
-                    <div class="col-lg-6  order-0 order-lg-1 p-0 p-lg-3">
+                    <div class="col-lg-6  order-0 order-lg-1 p-0 p-lg-3" data-aos-duration="2000" data-aos="fade-right" data-aos-delay="200" data-aos-once="true">
                         <div class="img-capsule">
                             <img src="assets/img/projects/project-2.png">
                             <div class="back-object"></div>
@@ -346,7 +347,7 @@
     <section class="cta-section">
         <div class="container-fluid">
             <div class="row gy-5">
-                <div class="col-xxl-4 col-md-6">
+                <div class="col-xxl-4 col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-once="true">
                     <p>
                         1975 yılında inşaat sektörüne giren Yedi Yapı, iş dünyasındaki vizyonuyla, kısa sürede inşaat
                         sektöründe adı güven ve kaliteyle anılan bir şirket konumuna yükseldi. Yüzde yüz yerli
@@ -354,7 +355,7 @@
                         İstanbul’da birçok prestijli projeye imza attı. Müşteri odaklı hizmet anlayışı..
                     </p>
                 </div>
-                <div class="col-xxl-8 text-end col-md-6">
+                <div class="col-xxl-8 text-end col-md-6" data-aos="fade-left" data-aos-duration="2000" data-aos-once="true">
                     <img src="assets/img/cta-img.png">
                 </div>
 
@@ -365,19 +366,19 @@
 
     <!-- =========== Blog START =========== -->
     <section class="blog-section">
-        <div class="text-center mb-40">
+        <div class="text-center mb-40"  data-aos="fade-up" data-aos-duration="2000" data-aos-once="true">
             <h3 class="h3-title mb-20">
                 Blog
             </h3>
             <p>Güncel haberler, kurumsal yayınlarımızı basın bültenleri ve daha fazlası.</p>
         </div>
         <div class="blog-swiper-wrap">
-            <a class="b-nav-btn blogFeaturesSwiper-button-prev" href="#"><i class="icon-chevron-left"></i></a>
+            <a  data-aos="fade-right" data-aos-duration="2000" data-aos-once="true" class="b-nav-btn blogFeaturesSwiper-button-prev" href="#"><i class="icon-chevron-left"></i></a>
             <div class="container m-0">
                 <div class="swiper blogFeaturesSwiper">
                     <div class="swiper-wrapper">
 
-                        <div class="swiper-slide">
+                        <div class="swiper-slide" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                             <div class="blog-card small">
                                 <div class="head">
                                     <img src="assets/img/blogs/blog-1.png">
@@ -392,7 +393,7 @@
                             </div>
                         </div>
 
-                        <div class="swiper-slide">
+                        <div class="swiper-slide" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="100" data-aos-once="true">
                             <div class="blog-card small">
                                 <div class="head">
                                     <img src="assets/img/blogs/blog-2.png">
@@ -407,7 +408,7 @@
                             </div>
                         </div>
 
-                        <div class="swiper-slide">
+                        <div class="swiper-slide"  data-aos="fade-up" data-aos-duration="2000" data-aos-delay="200" data-aos-once="true">
                             <div class="blog-card small">
                                 <div class="head">
                                     <img src="assets/img/blogs/blog-3.png">
@@ -423,7 +424,7 @@
                             </div>
                         </div>
 
-                        <div class="swiper-slide">
+                        <div class="swiper-slide" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="300" data-aos-once="true">
                             <div class="blog-card small">
                                 <div class="head">
                                     <img src="assets/img/blogs/blog-4.png">
@@ -438,7 +439,7 @@
                             </div>
                         </div>
 
-                        <div class="swiper-slide">
+                        <div class="swiper-slide" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="400" data-aos-once="true">
                             <div class="blog-card small">
                                 <div class="head">
                                     <img src="assets/img/blogs/blog-5.png">
@@ -458,18 +459,18 @@
 
                 </div>
             </div>
-            <a class="b-nav-btn blogFeaturesSwiper-button-next" href="#"><i class="icon-chevron-right"></i></a>
+            <a  data-aos="fade-left" data-aos-duration="2000" data-aos-once="true" class="b-nav-btn blogFeaturesSwiper-button-next" href="#"><i class="icon-chevron-right"></i></a>
         </div>
         <div class="text-center mt-40">
-            <a href="blog.html" class="btn-rounded-redirect">Tüm Haberler <i class="icon-Path3662"> </i></a>
+            <a data-aos="fade-up" data-aos-duration="2000" data-aos-once="true" href="blog.html" class="btn-rounded-redirect">Tüm Haberler <i class="icon-Path3662"> </i></a>
         </div>
     </section>
     <!-- =========== Blog END =========== -->
 
     <!-- =========== We Brands START =========== -->
     <section>
-        <h3 class="h3-title text-center">Markalarımız</h3>
-        <div class="overflow-hidden">
+        <h3  data-aos="fade-up" data-aos-duration="2000" data-aos-once="true" class="h3-title text-center">Markalarımız</h3>
+        <div class="overflow-hidden"  data-aos="fade-up" data-aos-duration="2000" data-aos-delay="100" data-aos-once="true">
             <div class="swiper brandSwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -577,6 +578,7 @@
     <script src="assets/vendor/swipperjs/swiper-bundle.min.js"></script>
     <script src="assets/vendor/waypoint/jquery.waypoints.js"></script>
     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="assets/vendor/aos/aos.js"></script>
 
     <!-- Main Js Source File -->
     <script src="assets/js/main.js"></script>
