--- a/iletisim.html
+++ b/iletisim.html
@@ -170,14 +170,14 @@
                 </div>
 
                 <div class="col-lg-2 col-sm-6 d-flex flex-column justify-content-lg-end">
-                    <div class="layer-icon mb-20">
+                    <a href="tel:02124539235" class="layer-icon mb-20">
                         <i class="icon-phone"></i>
                         <p>0 (212) 453 92 35</p>
-                    </div>
-                    <div class="layer-icon">
+                    </a>
+                    <a href="tel:02123509414" class="layer-icon">
                         <i class="icon-print"></i>
                         <p>0 (212) 350 94 14</p>
-                    </div>
+                    </a>
                 </div>
 
                 <div class="col-lg-3 col-sm-6">
