--- a/biz-kimiz.html
+++ b/biz-kimiz.html
@@ -32,19 +32,19 @@
             <nav class="nav">
                 <ol class="navbar">
                     <li class="dropdown">
-                        <a class="nav-link active" href="#about">Hakkında <i
+                        <a class="nav-link active" href="#about">HAKKINDA <i
                                 class="dropdown-icon icon-chevron-left"></i></a>
                         <div class="link-dropdown-content">
                             <ol>
-                                <li><a href="biz-kimiz.html">Biz Kimiz?</a></li>
-                                <li><a href="tarihce.html">Tarihçe</a></li>
-                                <li><a href="yonetim-kurulu.html">Yönetim Kurulu</a></li>
+                                <li><a href="biz-kimiz.html">BİZ KİMİZ?</a></li>
+                                <li><a href="tarihce.html">TARİHÇE</a></li>
+                                <li><a href="yonetim-kurulu.html">YÖNETİM KURULU</a></li>
                             </ol>
                         </div>
                     </li>
-                    <li><a class="nav-link" href="projelerimiz.html">Projelerimiz</a></li>
-                    <li><a class="nav-link" href="blog.html">Blog</a></li>
-                    <li><a class="nav-link" href="iletisim.html">İletişim</a></li>
+                    <li><a class="nav-link" href="projelerimiz.html">PROJELERİMİZ</a></li>
+                    <li><a class="nav-link" href="blog.html">BLOG</a></li>
+                    <li><a class="nav-link" href="iletisim.html">İLETİŞİM</a></li>
                 </ol>
             </nav>
         </div>
@@ -55,7 +55,7 @@
             <div class="routers-link">
                 <a href="index.html">Anasayfa <i class="icon-chevron-right"></i></a>
                 <a href="javascript:;">Hakkında <i class="icon-chevron-right"></i></a>
-                <a class="active" href="biz-kimiz.html">Biz Kimiz?</a>
+                <a class="active" href="biz-kimiz.html">BİZ KİMİZ?</a>
             </div>
         </div>
     </div>
